src/test/run-pass/borrowck-root-while-cond-2.rs
fn main() {
    let rec = @{mut f: @{g: ~[1, 2, 3]}};
    while rec.f.g.len() == 23 {}
}
